@@ -1,3 +1,7 @@
+2014-06-18  Julien Moutte  <julien@fluendo.com>
+
+	* gst-fluendo-ttml.spec.in: Fix spec file for 1.0.
+
 2014-06-17  Release Maker <nomail@fluendo.com>
 
 	* configure.ac: Back to TRUNK.
